Upload avatar iframe fix.
Signed-off-by: Diwank Singh <diwank@iheartco.de>

--- a/app/assets/stylesheets/editinfo.css
+++ b/app/assets/stylesheets/editinfo.css
@@ -34,8 +34,11 @@
 	clear:both;
 }
 
-.imgbox {
-
+.imgbox iframe{
+  border: none;
+  width: 100%;
+  height: 130px;
+  overflow: hidden;
 }
 
 .imgbox .imger {
