--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -46,15 +46,15 @@ $('#myTab a').click(function (e) {
 
 			<div class="imgbox">
 				<iframe src="/editavatar"></iframe>
-				<img src="<%= teacher_thumb_lg(current_teacher) %>" class="imger" />
+				<!-- <img src="<%= teacher_thumb_lg(current_teacher) %>" class="imger" /> -->
 			</div>
 
 
-		  	<div style="margin-top:30px;color:#444;font-style:italic">Update your profile picture<br />
+		  	<!-- <div style="margin-top:30px;color:#444;font-style:italic">Update your profile picture<br />
 		  	<%= fields_for current_teacher.info do |i| %>
 		  	<%= i.file_field :avatar %></div>
 
-		  	<div style="clear:both"></div>
+		  	<div style="clear:both"></div> -->
 
 
 
