--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 
 
 
-
+		<% unless params[:action] == "bookmarklet" %>
 		<div class="container" style="margin-top:20px">
 			<div style="clear:both"></div>
 
@@ -49,7 +49,7 @@
 			<p>&copy; Claco 2012 &nbsp;&nbsp;&nbsp;<a href="/">Home</a> / <a href="/about">About</a> /  <a href="/unitedweteach">#UnitedWeTeach</a> / <a href="/about/team">Our Team</a> / <a href="#" onclick="olark('api.box.expand'); return false">Contact</a> <span style="float:right;font-size:11px"><a href="http://schoolspeedtest.org/" target="_blank"><%= image_tag("public/highway.jpg", :style => "margin-right:20px;opacity: 0.50;filter: alpha(opacity=50);") %></a>Claco&trade; &bull; <a href="/legal/tos" target="_blank">Terms of Service</a> &bull; <a href="/legal/privacy" target="_blank">Privacy Policy</a></span></p>
 			</footer>
 		</div>
-
+		<% end %>
 
 
 
@@ -95,9 +95,11 @@
 		  })();
 
 		</script>
+		<% unless params[:action] == "bookmarklet" %>
 		<!-- begin olark code --><script data-cfasync="false" type='text/javascript'>/*{literal}<![CDATA[*/
 window.olark||(function(c){var f=window,d=document,l=f.location.protocol=="https:"?"https:":"http:",z=c.name,r="load";var nt=function(){f[z]=function(){(a.s=a.s||[]).push(arguments)};var a=f[z]._={},q=c.methods.length;while(q--){(function(n){f[z][n]=function(){f[z]("call",n,arguments)}})(c.methods[q])}a.l=c.loader;a.i=nt;a.p={0:+new Date};a.P=function(u){a.p[u]=new Date-a.p[0]};function s(){a.P(r);f[z](r)}f.addEventListener?f.addEventListener(r,s,false):f.attachEvent("on"+r,s);var ld=function(){function p(hd){hd="head";return["<",hd,"></",hd,"><",i,' onl' + 'oad="var d=',g,";d.getElementsByTagName('head')[0].",j,"(d.",h,"('script')).",k,"='",l,"//",a.l,"'",'"',"></",i,">"].join("")}var i="body",m=d[i];if(!m){return setTimeout(ld,100)}a.P(1);var j="appendChild",h="createElement",k="src",n=d[h]("div"),v=n[j](d[h](z)),b=d[h]("iframe"),g="document",e="domain",o;n.style.display="none";m.insertBefore(n,m.firstChild).id=z;b.frameBorder="0";b.id=z+"-loader";if(/MSIE[ ]+6/.test(navigator.userAgent)){b.src="javascript:false"}b.allowTransparency="true";v[j](b);try{b.contentWindow[g].open()}catch(w){c[e]=d[e];o="javascript:var d="+g+".open();d.domain='"+d.domain+"';";b[k]=o+"void(0);"}try{var t=b.contentWindow[g];t.write(p());t.close()}catch(x){b[k]=o+'d.write("'+p().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};ld()};nt()})({loader: "static.olark.com/jsclient/loader0.js",name:"olark",methods:["configure","extend","declare","identify"]});
 /* custom configuration goes here (www.olark.com/documentation) */
 olark.identify('8849-415-10-3302');/*]]>{/literal}*/</script><noscript><a href="https://www.olark.com/site/8849-415-10-3302/contact" title="Contact us" target="_blank">Questions? Feedback?</a> powered by <a href="http://www.olark.com?welcome" title="Olark live chat software">Olark live chat software</a></noscript><!-- end olark code -->
+		<% end %>
 	</body>
 </html>
