--- a/app/views/binders/bookmarklet.html.erb
+++ b/app/views/binders/bookmarklet.html.erb
@@ -22,3 +22,43 @@
 
   </form>
 </div>
+
+<div class="fol-picker" style="margin-bottom:10px">
+
+  <div class="togbar" onclick="togglePicker(this)">
+    <span class="chosenTitle">
+      <i>Choose a binder or folder to copy this to</i>
+    </span>
+    <div class="down-arrow"></div>
+    <input type="hidden" name="folid" class="chosenOne" value="" />
+  </div>
+
+  <div class="pickerpane">
+
+    <% if !@root.nil? %>
+    <% @root.each do |binder| %>
+
+
+      <% if binder.parent["id"] == "0" %>
+
+        <div class="bndr">
+
+          <div class="dir" folid="<%= binder.id.to_s %>" turl="<%= named_binder_route(binder) %>">
+            <div class="arrow-right" onclick="togglePickFolder(this)"></div>
+            <span class="dirtitle" onclick="selectPickFolder(this)">
+              <%= image_tag "binders/folder.png", :class => "foldicon" %>
+              <%= binder.title %>
+            </span>
+            <div class="dirWrap"></div>
+
+          </div>
+        </div>
+
+      <% end %>
+
+    <% end %>
+    <% end %>
+
+
+  </div>
+</div>
