creates email layout and partials for each section

--- a/app/views/user_mailer/system_invite.html.erb
+++ b/app/views/user_mailer/system_invite.html.erb
@@ -1,22 +1,28 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-<head>
-    <title></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-Hi there!<br /><br />
-We received a request for a beta invite for this email. <br/>
-We've been working around the clock to get our new site online<br/>
-And we're excited to inform you that it's finally ready!<br />
-<br />
-Here is your exclusive link to create an account on Claco:<br />
-<%= link_to @link, @link %><br />
-<br />
-Feel free to write back if you have any questions!<br />
-<br />
--Eric<br />
-Team Claco<br />
-(formerly Classconnect)
-</body>
-</html>
+<tr>
+  <td style="padding: 30px 0 0 60px;" colspan="2">
+    <h1 style="padding:0; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a;">Congratulations!</h1>
+  </td>
+</tr>
+
+<tr>
+  <td style="padding: 30px 60px 15px 60px;" colspan="2">
+    <p style="font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #2a2a2a; font-size: 15px; line-height: 20px;">
+      Hi there!
+    </p>
+
+    <p style="font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #2a2a2a; font-size: 15px; line-height: 20px;">
+      We received a request for a beta invite for this email. <br/>
+      We've been working around the clock to get our new site online<br/>
+      And we're excited to inform you that it's finally ready!<br />
+    </p>
+    
+    <p style="font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #2a2a2a; font-size: 15px; line-height: 20px;">
+      Here is your exclusive link to create an account on Claco:
+    </p>
+
+    <p style="font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #2a2a2a; font-size: 15px; line-height: 20px;">
+      <%= link_to @link, @link %>
+    </p>
+
+  </td>
+</tr>
