--- a/app/views/shared/email/_footer.html.erb
+++ b/app/views/shared/email/_footer.html.erb
@@ -1,22 +1,22 @@
 <tr align = "center">
   <td width="500" style="" colspan="2">
+    <p style="padding: 5px 15px; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; font-size: 26px; line-height: 20px;"> We ♥ educators.</p>
     <p align="center" style="margin:0; font-weight: bold; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 20px;">
       <a href="http://www.claco.com/?utm_source=footer&utm_medium=email&utm_campaign=shared">HOME</a> | 
       <a href="http://www.claco.com/about/?utm_source=footer&utm_medium=email&utm_campaign=shared">ABOUT US</a> | 
       <a href="http://www.claco.com/apply/?utm_source=footer&utm_medium=email&utm_campaign=shared">JOIN THE COMMUNITY</a>
     </p>
     <p>
-      <a href="http://www.facebook.com/teamclaco">
+      <a href="http://www.facebook.com/teamclaco" style="text-decoration: none;">
         <img src="http://boutineassets.s3.amazonaws.com/email/facebook.png"/>
       </a>
-      <a href="http://www.pinterest.com/claco/">
+      <a href="http://www.pinterest.com/teamclaco/" style="text-decoration: none;">
         <img src="http://boutineassets.s3.amazonaws.com/email/pinterest.png"/>
       </a>
-      <a href="http://www.twitter.com/teamclaco">
+      <a href="http://www.twitter.com/teamclaco" style="text-decoration: none;">
         <img src="http://boutineassets.s3.amazonaws.com/email/twitter.png"/>
       </a>
     </p>
-    <p style="padding: 5px 15px; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; font-size: 13px; line-height: 20px;"> We ♥ educators.</p>
   </td>
 </tr>
 <tr>
