--- a/app/views/shared/email/_css.html.erb
+++ b/app/views/shared/email/_css.html.erb
@@ -9,10 +9,11 @@
 
   /* Reset Styles */
   img{border:none; font-size:14px; font-weight:bold; height:auto; line-height:100%; outline:none; text-decoration:none; text-transform:capitalize;}
-  a:link {color: #A101A6; text-decoration: none; }
-  a:active {color: #7A207D; text-decoration: none; }
-  a:visited {color: #7A207D; text-decoration: none; }
-  a:hover {color: #CD35D3; text-decoration: none; }
+  a {text-decoration: none; }
+  a:link {color: #db044f; text-decoration: none; }
+  a:active {color: #620382; text-decoration: none; }
+  a:visited {color: #620382; text-decoration: none; }
+  a:hover {color: #f2a4c5; text-decoration: none; }
 
   /* Some sensible defaults for images
   Bring inline: Yes. */
@@ -28,14 +29,14 @@
   Bring inline: Yes. */
   h1, h2, h3, h4, h5, h6 {color: black;}
 
-  h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {color: #A101A6 !important;}
+  h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {color: #db044f !important;}
 
   h1 a:active, h2 a:active,  h3 a:active, h4 a:active, h5 a:active, h6 a:active {
-    color: #7A207D; !important;
+    color: #620382; !important;
   }
 
   h1 a:visited, h2 a:visited,  h3 a:visited, h4 a:visited, h5 a:visited, h6 a:visited {
-    color: #7A207D; !important;
+    color: #620382; !important;
   }
 
   /* Outlook 07, 10 Padding issue fix
