--- a/app/views/shared/email/_feedback.html.erb
+++ b/app/views/shared/email/_feedback.html.erb
@@ -1,9 +1,9 @@
 <tr>
-  <td>
+  <td width="500" style="" colspan="2">
     <table cellpadding="0" cellspacing="0" border="0" align="center" style="padding:0; margin:0;">
       <tr>
         <td style="padding: 15px 0 30px 60px;" width="340">
-          <h4 style="font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; padding:0; margin:0; text-align:center;">We love hearing feedback! Let us know how we can improve your overall experience.</h4>
+          <h4 style="font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; padding:0; margin:0; text-align:center;">Help us be help you! Give us feedback on how we can improve your overall experience.</h4>
         </td>
         <td width="150" style="padding: 0 60px 20px 30px;">
           <a href="mailto:support@claco.com?Subject='Claco Feedback'">
