--- a/app/views/user_mailer/message_email.html.erb
+++ b/app/views/user_mailer/message_email.html.erb
@@ -1,17 +1,17 @@
 <tr>
-  <td style="padding: 30px 0 0 60px;" colspan="2">
+  <td style="padding: 30px 0 30px 60px;" colspan="2">
     <h1 style="padding:0; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a;">You got a message!</h1>
   </td>
 </tr>
 
 <tr>
-  <td align="center" valign="top">
+  <td style="padding: 10px 10px 0 60px; " align="center">
     <a href="#">
-      <img src="<%= @limg %>" style="max-width:250px;" mc:label="image" mc:edit="liwc600_image00" />
+      <img src="<%= @limg %>" style="max-width:200px;"/>
     </a>
   </td>
-  <td valign="top">
-    <div mc:edit="liwc600_content00">
+  <td style="padding: 10px 60px 0 10px;" >
+    <div>
        <%= @head.html_safe %>
        <%= @html_safe ? truncate(@body, :length => 500).html_safe : truncate(@body, :length => 500) %><%= "... #{@omission}".html_safe unless @omission.empty? %>
     </div>
