--- a/app/views/shared/email/_feedback.html.erb
+++ b/app/views/shared/email/_feedback.html.erb
@@ -6,9 +6,13 @@
           <h4 style="font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; padding:0; margin:0; text-align:center;">Help us be help you! Give us feedback on how we can improve your overall experience.</h4>
         </td>
         <td width="150" style="padding: 0 60px 20px 30px;">
-          <a href="mailto:support@claco.com?Subject='Claco Feedback'">
-            <img src="http://boutineassets.s3.amazonaws.com/email/contact.png" width="150" border="0" alt="Get in touch!"/>
-          </a>
+          <table>
+            <tr>
+              <td align="center" width="150" bgcolor="#cf142b" style="background: #cf142b; padding-top: 6px; padding-right: 10px; padding-bottom: 6px; padding-left: 10px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block;"><a href="mailto:support@claco.com?Subject='Claco Feedback'" style="color: #fff; text-decoration: none;">
+                Get in touch!
+              </a></td>
+            </tr>
+          </table>
         </td>
       </tr>
     </table>
