--- a/app/views/user_mailer/message_email.html.erb
+++ b/app/views/user_mailer/message_email.html.erb
@@ -1,6 +1,8 @@
 <tr>
   <td style="padding: 30px 0 30px 60px;" colspan="2">
-    <h1 style="padding:0; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a;">You got a message!</h1>
+    <h1 style="padding:0; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a;">
+      <%= @pre  %>
+    </h1>
   </td>
 </tr>
 
@@ -13,7 +15,14 @@
   <td style="padding: 10px 60px 0 10px;" >
     <div>
        <%= @head.html_safe %>
-       <%= @html_safe ? truncate(@body, :length => 500).html_safe : truncate(@body, :length => 500) %><%= "... #{@omission}".html_safe unless @omission.empty? %>
+       <%= @html_safe ? truncate(@body, :length => 500).html_safe : truncate(@body, :length => 500) %>
     </div>
   </td>
+  <table>
+    <tr>
+      <td align="center" width="150" bgcolor="#cf142b" style="background: #cf142b; padding-top: 6px; padding-right: 10px; padding-bottom: 6px; padding-left: 10px; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block;"><a href="<%= @linkto %>" style="color: #fff; text-decoration: none;">
+        <%= @message ? 'View Full Message' : 'View Profile' %>
+      </a></td>
+    </tr>
+  </table>
 </tr>
