new email template final?
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/user_mailer/user_invite.html.erb
+++ b/app/views/user_mailer/user_invite.html.erb
@@ -1,22 +1,17 @@
-<tr>
-  <td style="padding: 30px 60px 15px 60px;" colspan="2">
-    <a href=<%= @invitation_url %>>
-      <img src="http://i.imgur.com/HLiUw.png" alt="start shopping" style="width:470px"/>
-    </a>
-    
-    <h1 style="padding:0; margin:0; line-height: 60px;text-align:center; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a;">Join <%= @sender.first_last %> on Claco</h1>
-
-    <p style="font-style: italics; font-family: Helvetica, Arial, sans-serif; color: #2a2a2a; font-size: 15px; line-height: 20px;">
-      <%= @sender.first_last %> has sent you an exclusive beta invite for Claco. Visit the secret link below to create your account:</p>
-
-    <p style="font-style: italics; font-family: Helvetica, Arial, sans-serif; color: #2a2a2a; font-size: 15px; line-height: 20px;text-align:center;">
-      <a href=<%= @invitation_url %> style="font-weight: bold;"> 
-        <%= link_to @link, @link %>
-      </a>
-    </p>
-
-    <p style="font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #2a2a2a; font-size: 15px; line-height: 20px;">
-      To learn more about Claco, take a look at http://www.claco.com or reply to this email!
-    </p>
-  </td>
-</tr>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+    <title></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+Hi there!<br />
+<%= @sender.first_last %> has sent you an exclusive beta invite for Claco. Visit the secret link below to create your account:<br />
+<br />
+<%= link_to @link, @link %><br />
+<br />
+To learn more about Claco, take a look at http://www.claco.com or reply to this email!<br />
+<br />
+-Team Claco
+</body>
+</html>
