new email template finalized
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/shared/email/_header.html.erb
+++ b/app/views/shared/email/_header.html.erb
@@ -1,7 +1,8 @@
 <tr>
   <td style="no-repeat;" colspan="2">
     <a href="http://www.claco.com">
-      <img src="http://img.cla.co/0/logo.png"/>
+    	<%= image_tag("email/email_logo.png") %>
+      <!-- <img src="http://img.cla.co/0/logo.png"/> -->
     </a>
   </td>
 </tr>
