--- a/app/views/user_mailer/message_email.html.erb
+++ b/app/views/user_mailer/message_email.html.erb
@@ -18,7 +18,7 @@
     <ul style="list-style: none; padding: 10px 0 0; margin-top: 5px;">
       <% @button_info.each do |info| %> 
         <li style='margin-bottom: 8px; margin-left: 0px; width: 170px;'>
-          <a href="<%= info[:linkto] %>" align="center" width="150" bgcolor="#cb0101" style="background: #cb0101; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; color: #fff; text-decoration: none; width: auto;">
+          <a href="<%= info[:linkto] %>" align="center" width="150" bgcolor="#cb0101" style="background: #cb0101; text-align: center; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; color: #fff; text-decoration: none; width: auto;">
             <%= info[:text] %>
           </a>
         </li>
