--- a/app/views/shared/email/_feedback.html.erb
+++ b/app/views/shared/email/_feedback.html.erb
@@ -2,13 +2,13 @@
   <td width="500" style="" colspan="2">
     <table cellpadding="0" cellspacing="0" border="0" align="center" style="padding:0; margin:0;">
       <tr>
-        <td style="padding: 15px 0 30px 60px;" width="230">
+        <td style="padding: 15px 0 30px 60px;" width="200">
           <h4 style="font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; padding:0; margin:0; text-align:center;">Help us be help you! Give us feedback on how we can improve your overall experience.</h4>
         </td>
-        <td width="150" style="padding: 0 60px 20px 30px;">
+        <td width="150" style="padding: 10px 60px 0 20px;">
           <ul style="list-style: none; padding: 10px 0 0; margin-top: 5px;">
             <li style='margin-bottom: 8px; margin-left: 0px; width: 170px;'>
-              <a href="mailto:support@claco.com?S ubject='Claco Feedback'" align="center" width="150" bgcolor="#d6cfd1" style="background: #d6cfd1; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; color: #cb0101; text-decoration: none;">
+              <a href="mailto:support@claco.com?subject='Claco Feedback'" align="center" width="150" bgcolor="#d6cfd1" style="background: #d6cfd1; text-align: center; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; color: #cb0101; text-decoration: none;">
                 Contact Us!
               </a>
             </li>
