--- a/app/views/shared/email/_footer.html.erb
+++ b/app/views/shared/email/_footer.html.erb
@@ -8,13 +8,16 @@
     </p>
     <p>
       <a href="http://www.facebook.com/teamclaco" style="text-decoration: none;">
-        <img src="http://boutineassets.s3.amazonaws.com/email/facebook.png"/>
+        <%= image_tag("email/facebook.png") %>
+        <!-- <img src="http://boutineassets.s3.amazonaws.com/email/facebook.png"/> -->
       </a>
       <a href="http://www.pinterest.com/teamclaco/" style="text-decoration: none;">
-        <img src="http://boutineassets.s3.amazonaws.com/email/pinterest.png"/>
+        <%= image_tag("email/pinterest.png") %>
+        <!-- <img src="http://boutineassets.s3.amazonaws.com/email/pinterest.png"/> -->
       </a>
       <a href="http://www.twitter.com/teamclaco" style="text-decoration: none;">
-        <img src="http://boutineassets.s3.amazonaws.com/email/twitter.png"/>
+        <%= image_tag("email/twitter.png") %>
+        <!-- <img src="http://boutineassets.s3.amazonaws.com/email/twitter.png"/> -->
       </a>
     </p>
   </td>
