email fixes and cleanup
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -15,17 +15,15 @@
 
             <%= render :partial => "shared/email/header" %>
 
-            <!-- Body -->
+            <%# Body %>
 
             <%= yield %>
 
-            <!-- Thank you  -->
-
-            <!-- Feedback  -->
+            <%# Feedback %>
 
             <%= render :partial => "shared/email/feedback" %>
             
-            <!-- Footer  -->
+            <%# Footer %>
 
             <%= render :partial => "shared/email/footer" %>
 
