--- a/app/views/user_mailer/message_email.html.erb
+++ b/app/views/user_mailer/message_email.html.erb
@@ -8,7 +8,7 @@
 
 <tr>
   <td style="padding: 10px 10px 0 60px; " align="center">
-    <a href="#">
+    <a href="<%= @limg_link %>">
       <img src="<%= @limg %>" width="200px" style="max-width:200px;"/>
     </a>
   </td>
