email asset fix
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/shared/email/_footer.html.erb
+++ b/app/views/shared/email/_footer.html.erb
@@ -8,13 +8,13 @@
     </p>
     <p>
       <a href="http://www.facebook.com/teamclaco" style="text-decoration: none;">
-        <%= image_tag("email/facebook.png") %>
+        <img href="<%= asset_path("email/facebook.png") %>" />
       </a>
       <a href="http://www.pinterest.com/teamclaco/" style="text-decoration: none;">
-        <%= image_tag("email/pinterest.png") %>
+        <img href="<%= asset_path("email/pinterest.png") %>" />
       </a>
       <a href="http://www.twitter.com/teamclaco" style="text-decoration: none;">
-        <%= image_tag("email/twitter.png") %>
+        <img href="<%= asset_path("email/twitter.png") %>" />
       </a>
     </p>
   </td>
