--- a/app/views/shared/email/_header.html.erb
+++ b/app/views/shared/email/_header.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td style="no-repeat;" colspan="2">
     <a href="http://www.claco.com">
-    	<%= image_tag("email/email_logo.png") %>
+    	<img href="<%= asset_path("email/email_logo.png") %>" />
     </a>
   </td>
 </tr>
