email hardcode images hotfix
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/shared/email/_footer.html.erb
+++ b/app/views/shared/email/_footer.html.erb
@@ -8,13 +8,13 @@
     </p>
     <p>
       <a href="http://www.facebook.com/teamclaco" style="text-decoration: none;">
-        <img href="<%= asset_path("email/facebook.png") %>" />
+        <img href="http://static.cla.co/assets/email/facebook-ed1e182f3af5c7708a8f17b3b554f759.png" />
       </a>
       <a href="http://www.pinterest.com/teamclaco/" style="text-decoration: none;">
-        <img href="<%= asset_path("email/pinterest.png") %>" />
+        <img href="http://static.cla.co/assets/email/pinterest-bd968b2b26c99a412af9849947ad27bc.png" />
       </a>
       <a href="http://www.twitter.com/teamclaco" style="text-decoration: none;">
-        <img href="<%= asset_path("email/twitter.png") %>" />
+        <img href="http://static.cla.co/assets/email/twitter-7524359a65bae9780c44a478154496e0.png" />
       </a>
     </p>
   </td>
