--- a/app/views/shared/email/_header.html.erb
+++ b/app/views/shared/email/_header.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td style="no-repeat;" colspan="2">
     <a href="http://www.claco.com">
-    	<img href="<%= asset_path("email/email_logo.png") %>" />
+    	<img href="http://static.cla.co/assets/email/email_logo-29e6ebd2f5b60eb03696b0f5c4f17cd1.png" />
     </a>
   </td>
 </tr>
