Bookmarklet in place.
Signed-off-by: Diwank Singh <singh@diwank.name>

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,11 +2,11 @@
     <%= stylesheet_link_tag    "home/pub/about", :media => "all" %>
 <% end %>
 
-<div class="splashback">
+<div class="splashback apple">
 	<div class="container">
 
 		<div class="tagline">
-			Save time & focus on what you do best — educating.<br /><br />
+			Save time &amp; focus on what you do best — educating.<br /><br />
 			Meet your new learning network.
 		</div>
 
