--- a/app/views/shared/email/_feedback.html.erb
+++ b/app/views/shared/email/_feedback.html.erb
@@ -3,7 +3,7 @@
     <table cellpadding="0" cellspacing="0" border="0" align="center" style="padding:0; margin:0;">
       <tr>
         <td style="padding: 15px 0 30px 60px;" width="200">
-          <h4 style="font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; padding:0; margin:0; text-align:center;">Help us be help you! Give us feedback on how we can improve your overall experience.</h4>
+          <h4 style="font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; padding:0; margin:0; text-align:center;">Help us help you! Give us feedback on how we can improve your overall experience.</h4>
         </td>
         <td width="150" style="padding: 10px 60px 0 20px;">
           <ul style="list-style: none; padding: 10px 0 0; margin-top: 5px;">
