--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -39,7 +39,7 @@
           </a>
           <% end %>
         <% else %>
-          <a class="btn btn-medium btn-primary actbtn" href="/apply">
+          <a class="btn btn-medium btn-primary actbtn" href="/login">
             <%= image_tag("profile/whitescribe.png", :style => "float:left;height:12px;margin:3px 5px 0 0") %>
             <span class="upme">Subscribe</span>
           </a>
