--- a/app/views/admin/apps.html.erb
+++ b/app/views/admin/apps.html.erb
@@ -3,7 +3,6 @@
 
 <table>
 <tr>
-<td>#</td>
 <td>First Name</td>
 <td>Last Name</td>
 <td>Email</td>
@@ -11,11 +10,8 @@
 <td>Timestamp</td>
 <td>Status</td>
 </tr>
-<% 
-i=1
-@apps.each do |app| %>
+<% @apps.each do |app| %>
 <tr>
-<td><b><%= i.to_s %></b></td><% i += 1 %>
 <td><%= app.fname %></td>
 <td><%= app.lname %></td>
 <td><%= app.email %></td>
@@ -30,3 +26,5 @@ i=1
 </tr>
 <% end %>
 </table>
+<%= paginate(@apps) %>
+<%= page_entries_info(@apps).html_safe %>
