fixes padding issue.... your mom

--- a/app/views/shared/email/_footer.html.erb
+++ b/app/views/shared/email/_footer.html.erb
@@ -1,6 +1,6 @@
 <tr align = "center">
   <td width="500" style="" colspan="2">
-    <p style="padding: 5px 15px 8px; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; font-size: 26px; line-height: 20px;"> We ♥ educators.</p>
+    <p style="padding: 5px 15px 8px; margin:0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; color: #5a5a5a; font-size: 26px; line-height: 20px;"> We <span style="font-size:30px; color:#F70808">♥</span> educators.</p>
     <p align="center" style="margin:0; font-weight: bold; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 20px;">
       <a href="http://www.claco.com/?utm_source=footer&utm_medium=email&utm_campaign=shared">HOME</a> | 
       <a href="http://www.claco.com/about/?utm_source=footer&utm_medium=email&utm_campaign=shared">ABOUT US</a> | 
