--- a/app/views/user_mailer/fork_email.html.erb
+++ b/app/views/user_mailer/fork_email.html.erb
@@ -13,16 +13,14 @@
     </a>
   </td>
   <td style="padding: 10px 60px 0 20px;" >
-    <%= @head.html_safe %>
-    <%= @html_safe ? truncate(@body, :length => 500).html_safe : truncate(@body, :length => 500) %>
+    <p> <%= 'Wow ' + @resource.title + ' was really helpful!' %></p>
+    <p> <%= @head.html_safe + ' snapped ' + @resource.title + ' to one of their binders:' %> </p>
     <ul style="list-style: none; padding: 10px 0 0; margin-top: 5px;">
-      <% @button_info.each do |info| %> 
-        <li style='margin-bottom: 8px; margin-left: 0px; width: 170px;'>
-          <a href="<%= info[:linkto] %>" align="center" width="150" bgcolor="#cb0101" style="background: #cb0101; text-align: center; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; color: #fff; text-decoration: none; width: auto;">
-            <%= info[:text] %>
-          </a>
-        </li>
-      <% end %>
+      <li style='margin-bottom: 8px; margin-left: 0px; width: 170px;'>
+        <a href="<%= @linkto %>" align="center" width="150" bgcolor="#cb0101" style="background: #cb0101; text-align: center; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; color: #fff; text-decoration: none; width: auto;">
+          Check it out!
+        </a>
+      </li>
     </ul>
   </td>
 </tr>
