Faggot pass page now fills itself
Signed-off-by: Diwank Singh <singh@diwank.name>

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -32,12 +32,25 @@ $(document).ready(function() {
 		fieldAdder();
 	});
 
+	$('#forgot_link').one('click', function /* prefillForgotPage */ (e){
+		e.preventDefault();
+		var username = $('input#user-info').val();
+		var link = $(this).attr('href');
+		$('#forgot_link').attr('href', link+'?user='+username);
+		$('#forgot_link').click();
+	});
+
+	$('input#forgot_user').val(getQueryHash().user);
+
+
+
 	// $('.new_teacher #teacher_email').each(
 	// 	function change email () {
 	// 		$(this).attr('value', getQueryHash().email || '');
 	// 	});
 
 });
+
 
 function fieldAdder () {
     $('#facebox input#invite_').last()
