--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,8 @@
-
-
 <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
 
           <a class="brand" href="/">
-            <!-- <%= image_tag("claco.png", :style => "height:24px") %> -->
             <%= render 'layouts/logo' %>
           </a>
           <div class="nav-collapse">
@@ -17,7 +14,7 @@
             <a href="/messages" class="btn top-notch-btn notch-nav">
               <%= image_tag("profile/message.png", :style => "height:16px;width:16px;margin-top:-3px") %>
               <% if current_teacher.get_unread_count != 0 %>
-              <div class="notchNum"><%= current_teacher.get_unread_count %></div>
+                <div class="notchNum"><%= current_teacher.get_unread_count %></div>
               <% end %>
             </a>
 
@@ -81,28 +78,17 @@
                 <button data-toggle="dropdown" class="btn top-notch-btn notch-login">Sign in</button>
                 <ul class="dropdown-menu noclose">
                   <%= form_for("teacher", :url => teacher_session_path) do |f| %>
-                    <%= f.text_field :login, :class => "span3 login-focus", :placeholder => "Username / Email" %>
+                    <%= f.text_field :login, :class => "span3 login-focus", :id => 'user-info', :placeholder => "Username / Email" %>
                     
                     <%= f.password_field :password, :class => "span3", :placeholder => "Password" %>
                     
                     <div style="font-size:10px; float:left; margin-top:8px">
-                      <a href="<%= new_password_path('teacher') %>">Forgot your password?</a>
+                      <a href="<%= new_password_path('teacher') %>" id='password-link'>Forgot your password?</a>
                     </div>
                     <button type="submit" class="btn" style="float:right">Sign in</button>
                   <% end %>
 
                   <div style="clear:both"></div>
-<!--
-                  <div class="signup-opt">
-
-                    <div class="or-account">
-                    or sign in with
-                    </div>
-                
-                    <a href="#" class="zocial facebook">Facebook</a>
-                    <a href="#" class="zocial twitter">Twitter</a>
-                  </div>
-                -->
 
                 </ul>
               </li>
@@ -111,7 +97,7 @@
           <% end %>
 
 
-          </div><!--/.nav-collapse -->
+          </div>
         </div>
       </div>
     </div>
