finalize new_user and request_invite emails

--- a/app/views/user_mailer/request_invite.html.erb
+++ b/app/views/user_mailer/request_invite.html.erb
@@ -5,12 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-Hi <%= @user.username %>,<br />
+Hey there,<br />
 <br/>
 I want to personally thank you for registering for an invite on Claco. We are very excited to have you be a part of our platform and look 
 forward to working with you in helping to find and share your learning content. <br/>
-
+<br/>
 If you have any questions at all, please do not hesitate to email me at eric@claco.com or call us at 908-248-2156. We'd love to hear from you. <br/>
+<br/>
 Best, <br />
 Eric Simons <br />
 CEO - Claco
