--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -7,22 +7,20 @@
 </tr>
 
 <tr>
-  <td style="padding: 10px 10px 0 60px; " align="center">
+  <td style="padding: 2em 1em 0 6em;vertical-align:top;" align="center">
     <a href="http://www.claco.com/eric">
-      <img src="http://i.imgur.com/0Zb6S.jpg" width="200px" style="max-width:200px;"/>
+      <img src="http://i.imgur.com/0Zb6S.jpg" style="max-width:165px;"/>
     </a>
   </td>
-  <td style="padding: 10px 60px 0 10px;" >
+  <td style="padding: 10px 60px 0 10px;width: 275px;" >
     Hi <%= @username %>,<br />
     <br/>
-    Eric from Claco here. <br/>
     Thanks again for joining us, we hope you love our new site. Here are some tips to get the most out of your Claco experience:<br />
-    <br />
-    1) <a href="http://www.claco.com/editinfo">Upload a profile picture and add some of your info!</a><br/>
-    2) <a href="http://www.claco.com/">Create your first binder and share it with your colleagues on Facebook or Twitter</a><br/>
-    3) <a href="http://www.claco.com/educators">Check out some awesome content and subscribe to teachers just like you!</a><br/> 
-    <br />
-    What are you waiting for?<br/>
+    <ol style='padding-left: 5px'>
+      <li><a href="http://www.claco.com/editinfo">Upload a profile picture and add your info!</a></li><br/>
+      <li><a href="http://www.claco.com/">Create your first binder</a></li><br/>
+      <li><a href="http://www.claco.com/educators">Subscribe to teachers just like you!</a></li><br/>
+    </ol>
     United we teach!<br/>
     <br/>
     Eric Simons <br />
