added admin panel for adding delayed subs
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -6,6 +6,7 @@
 <a href="/admin/apps">Applicants</a><br />
 <a href="/admin/users">Users</a><br />
 <a href="/admin/invites">Invites</a><br />
+<a href="/admin/autosubs">Delayed Subscriptions</a><br />
 <a href="/admin/fpfeatured">Pick Front Page Binders</a><br />
 <a href="/admin/featured">Pick Featured Binders</a><br />
 <a href="/admin/pioneer">Pick Pioneerchat Binder</a>
