--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -124,7 +124,19 @@
 			<div class="findppl">
 				<div class="boxyleft">
 
-		<% educators = current_teacher.recommends[0..8].shuffle[0..2].map{ |f| Teacher.find(f.to_s) } %>
+		<% #educators = current_teacher.recommends[0..8].shuffle[0..2].map{ |f| Teacher.find(f.to_s) } 
+
+			# because I'm fucking lazy
+			educators = []
+			current_teacher.recommends[0..8].shuffle[0..2].each do |f|
+				begin
+					educators << Teacher.find(f.to_s)
+				rescue
+					next
+				end
+			end
+
+		%>
 	
 		<% if !educators[0].nil? %>
 
