--- a/app/views/user_mailer/message_email.html.erb
+++ b/app/views/user_mailer/message_email.html.erb
@@ -7,7 +7,7 @@
 </tr>
 
 <tr>
-  <td style="padding: 10px 10px 0 60px; " align="center">
+  <td style="padding: 10px 0 0 60px; " align="center">
     <a href="<%= @limg_link %>">
       <img src="<%= @limg %>" width="200px" style="max-width:200px;"/>
     </a>
@@ -15,10 +15,10 @@
   <td style="padding: 10px 60px 0 20px;" >
     <%= @head.html_safe %>
     <%= @html_safe ? truncate(@body, :length => 500).html_safe : truncate(@body, :length => 500) %>
-    <ul style="list-style: none; padding: 10px 0 0; margin-top: 5px;">
+    <ul style="list-style: none; padding-top: 10px; margin-top: 5px;">
       <% @button_info.each do |info| %> 
         <li style='margin-bottom: 8px; margin-left: 0px; width: 170px;'>
-          <a href="<%= info[:linkto] %>" align="center" width="150" bgcolor="#cb0101" style="background: #cb0101; text-align: center; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; color: #fff; text-decoration: none; width: auto;">
+          <a href="<%= info[:linkto] %>" align="center" bgcolor="#ff0000" style="background: #ff0000; text-align: center; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block; width: auto;">
             <%= info[:text] %>
           </a>
         </li>
