minimal caching on public pages, a bunch of small fixes
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 		<%= stylesheet_link_tag    "jqueryui", :media => "all" %>
 
 		<%= yield :headcon %>
-		<%= csrf_meta_tags %>
+		<%= csrf_meta_tags unless response.cache_control[:public] %>
 
 		<% if signed_in? && current_teacher.getting_started %>
 
