Goodies page ready
Signed-off-by: Diwank Singh <singh@diwank.name>

--- a/app/views/home/goodies.html.erb
+++ b/app/views/home/goodies.html.erb
@@ -53,7 +53,7 @@
 				</div>
 
 				Get awesome &quot;We ♡ Teachers!&quot; Posters:<br>
-				<a class="btn btn-success">Download</a>
+				<a class="btn btn-success" href="<%= asset_path "public/heart.png" %>" download="IHeartTeachers">Download</a>
 			</div>
 
 
