--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 			<hr>
 
 			<footer>
-			<p>&copy; Claco 2012 &nbsp;&nbsp;&nbsp;<a href="/">Home</a> / <a href="/about">About</a> /  <a href="/unitedweteach">#UnitedWeTeach</a> / <a href="/about/team">Our Team</a> / <a href="#" onclick="olark('api.box.expand'); return false">Contact</a> <span style="float:right;font-size:11px"><a href="http://schoolspeedtest.org/" target="_blank"><%= image_tag("public/highway.jpg", :style => "margin-right:20px;opacity: 0.50;filter: alpha(opacity=50);") %></a>Claco&trade; &bull; <a href="/legal/tos" target="_blank">Terms of Service</a> &bull; <a href="/legal/privacy" target="_blank">Privacy Policy</a></span></p>
+			<p>&copy; Claco 2012 &nbsp;&nbsp;&nbsp;<a href="/">Home</a> / <a href="/about">About</a> /  <a href="/unitedweteach">#UnitedWeTeach</a> / <a href="#" onclick="olark('api.box.expand'); return false">Contact</a> / <a href="/goodies">Goodies</a> <span style="float:right;font-size:11px"><a href="http://schoolspeedtest.org/" target="_blank"><%= image_tag("public/highway.jpg", :style => "margin-right:20px;opacity: 0.50;filter: alpha(opacity=50);") %></a>Claco&trade; &bull; <a href="/legal/tos" target="_blank">Terms of Service</a> &bull; <a href="/legal/privacy" target="_blank">Privacy Policy</a></span></p>
 			</footer>
 		</div>
 		<% end %>
