--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -84,6 +84,7 @@
                     <%= f.text_field :login, :class => "span3 login-focus", :id => "user-info", :placeholder => "Username / Email" %>
                     
                     <%= f.password_field :password, :class => "span3", :placeholder => "Password" %>
+                    <input id="teacher_remember_me" name="teacher[remember_me]" type="hidden" value="1">
                     
                     <div style="font-size:10px; float:left; margin-top:8px">
                       <a href="<%= new_password_path('teacher') %>" id="forgot_link">Forgot your password?</a>
