--- a/app/views/shared/email/_footer.html.erb
+++ b/app/views/shared/email/_footer.html.erb
@@ -4,7 +4,7 @@
     <p align="center" style="margin:0; font-weight: bold; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 20px;">
       <a href="http://www.claco.com/?utm_source=footer&utm_medium=email&utm_campaign=shared">HOME</a> | 
       <a href="http://www.claco.com/about/?utm_source=footer&utm_medium=email&utm_campaign=shared">ABOUT US</a> | 
-      <a href="http://www.claco.com/apply/?utm_source=footer&utm_medium=email&utm_campaign=shared">JOIN THE COMMUNITY</a>
+      <a href="http://www.claco.com/unitedweteach/?utm_source=footer&utm_medium=email&utm_campaign=shared">#UNITEDWETEACH</a>
     </p>
     <p>
       <a href="http://www.facebook.com/teamclaco" style="text-decoration: none;">
