--- a/app/views/teachers/subscribers.html.erb
+++ b/app/views/teachers/subscribers.html.erb
@@ -8,6 +8,7 @@
         <%= image_tag(teacher_thumb_md(sub), {:class => 'thumbster'}) %>
         <% if !signed_in? %>
             <a class="btn btn-mini subbtn pull-right" href="/login">Subscribe</a>
+        <% elsif sub.id.to_s == current_teacher.id.to_s %>
         <% elsif !current_teacher.subscribed_to?(sub.id) %>
             <button class="btn btn-mini subbtn pull-right" data-action="subscribe" data-url="<%= sub.username %>/subscribe" type="button">Subscribe</button>
         <% else %>
